syntax = "proto3";
package pb;
/* go_package  Нужно указать полный путь до пакета, где будут лежать сгенерированные файлы. */
option go_package = "/pb";
import "google/api/annotations.proto";

service Gateway {
  rpc FindFilm(Message) returns (Message) {
    option (google.api.http) = {
      post: "/findfilm"
      body: "*"
    };
  }
  rpc UpdateImage(Message) returns (Message) {
    option (google.api.http) = {
      post: "/updateimage"
      body: "*"
    };
}
    rpc GetImage(Message) returns (Message) {
    option (google.api.http) = {
      post: "/getimage"
      body: "*"
    };
  }
  /* rpc GetExample(Message) returns (Message) { */
  /*   option (google.api.http) = { */
  /*     get: "/get/{id}" */
  /*   }; */
  /* } */
  /* rpc DeleteExample(Message) returns (Message) { */
  /*   option (google.api.http) = { */
  /*     delete: "/delete/{id}" */
  /*   }; */
  /* } */
  /* rpc PutExample(Message) returns (Message) { */
  /*   option (google.api.http) = { */
  /*     put: "/put" */
  /*     body: "*" */
  /*   }; */
  /* } */
  /* rpc PatchExample(Message) returns (Message) { */
  /*   option (google.api.http) = { */
  /*     patch: "/patch" */
  /*     body: "*" */
  /*   }; */
  /* } */
}

message Message {
  int64 id = 1;
  string film = 2; // text or callback
  string img = 3;
  string api = 4;
}
